--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
 
   <!-- Pull dynamic content from the data.json file -->
   <article class="container">
-      <!-- <h1>eeee</h1> -->
+      <div class="modal">
+        <div class="modal-content">
+          <h2>Delete comment</h2>
+          <p>Are you sure you want to delete this comment?   This will remove the comment and can't be undone.</p>
+          <aside class="modalBtnContainer">
+            <button>NO, CANCEL</button>
+            <button>YES, DELETE</button>
+          </aside>
+        </div>
+      </div>
   </article>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
