created the comment making section 2 enable update

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
   <!-- Pull dynamic content from the data.json file -->
   <article class="container">
+    <div class="commentBox">
+      <img src="images/avatars/image-juliusomo.png" alt="">
+      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <button>SEND</button>
+    </div>
       <div class="modal">
         <div class="modal-content">
           <h2>Delete comment</h2>
