--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h2>Delete comment</h2>
           <p>Are you sure you want to delete this comment?   This will remove the comment and can't be undone.</p>
           <aside class="modalBtnContainer">
-            <button>NO, CANCEL</button>
+            <button class="cancel">NO, CANCEL</button>
             <button>YES, DELETE</button>
           </aside>
         </div>
